single tweet route fail

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,10 @@ body {
   /* The html and body elements cannot have any padding or margin. */
 }
 
+li {
+  list-style: none;
+}
+
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
@@ -56,4 +60,20 @@ code {
 }
 .content .by {
   font-weight: bold;
+}
+
+#pic {
+  width:37px;
+  height:37px;
+  margin: -30px 0 0 0;
+}
+#stuff {
+  margin: 20px 0;
+  padding: 0;
+}
+#stuff li {
+  display: inline-block
+}
+#tweettext p {
+  margin: 0px;
 }
