--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 {% block content %}
   
   <div class="page-header">
-    <h1>Welcome to Twitter.js, Nimit!</h1>
+    <h1>{{title}}</h1>
   </div>
   <div class="row">
     <div class="col-md-3">
@@ -12,10 +12,18 @@
       100 followers
     </div>
     <div class="col-md-9">
+      <h3>All Tweets</h3>
     
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        <li>{{tweet.text}}</li>
+        <ul id='stuff'>
+          <li><img id='pic' src='../img/tweet.jpeg'></li>
+            <li id='tweettext'>
+            <p><strong><a href="/users/{{tweet.firstName}}/tweets/{{tweet.id}}">{{tweet.name}}</a></strong></p>
+            <p>{{tweet.text}}</p>
+            </li>
+
+        </ul>
       {% endfor %}
       
     </div>
